Fix active menu on sidebar not getting highlighted in dark mode

--- a/assets/styles/components/links.scss
+++ b/assets/styles/components/links.scss
@@ -14,6 +14,7 @@ a {
   text-decoration: none !important;
   color: get-light-color('text-color');
   @include transition();
+
   &.active {
     display: inline;
     color: get-light-color('accent-color');
@@ -29,6 +30,7 @@ a {
 a.header-anchor {
   text-decoration: none;
   color: get-light-color('heading-color');
+
   i,
   svg {
     font-size: 10pt;
@@ -36,12 +38,15 @@ a.header-anchor {
     display: none;
     margin-left: 0.5rem;
   }
+
   &:hover {
+
     i,
     svg {
       display: inline-block;
     }
   }
+
   code {
     color: get-light-color('inline-code-color');
   }
@@ -54,24 +59,31 @@ a.header-anchor {
 html[data-theme='dark'] {
   a {
     color: get-dark-color('accent-color');
+
     &:hover,
     &:focus {
       text-decoration: get-dark-color('hover-over-accent-color') underline;
       color: get-dark-color('hover-over-accent-color');
     }
   }
+
   .list-link {
     color: get-dark-color('text-color');
-    &:hover {
+
+    &:hover,
+    &.active {
       color: get-dark-color('accent-color');
     }
   }
+
   a.header-anchor {
     color: get-dark-color('heading-color');
+
     i,
     svg {
       color: get-dark-color('text-color');
     }
+
     code {
       color: get-dark-color('inline-code-color');
     }
